<resources>
    <string name="app_name">Spoton</string>
    <string name="menu_settings">Settings</string>

    <!-- status -->
    <string name="status">Status</string>
    <string name="SystemAdmin">ON/OFF DEVICE ADMIN</string>

    <!-- settings -->
    <string name="settings">Settings</string>
    <string name="unlockCountSettingText">Failed Attempt Count: 2</string>
    <string name="dropboxButton">Link with dropbox</string>

    <!-- Contacts -->
    <string name="contacts">Contacts</string>
    <string name="contactsExplain">SMS will be sent to these two numbers</string>
    <string name="contact1Hint">Contact number 1</string>
    <string name="contact2Hint">Contact number 2</string>
    <string name="emailHint">Enter Mail Here</string>

    <string name="contactsButton">Save Your Choice</string>

    <!--    for hidden cam-->
    <string name="pref_key_operation_mode">pref_key_operation_mode</string>
    <string name="pref_summary_help_enable">Check to enable help at startup</string>
    <string name="pref_key_help_enable">pref_key_help_enable</string>
    <string name="pref_key_revoke_setup">pref_key_revoke_setup</string>
    <string name="pref_key_command_text">pref_key_command_text</string>
    <string name="pref_key_command_number_1">pref_key_command_number_1</string>
    <string name="pref_key_command_number_2">pref_key_command_number_2</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Register</string>
    <string name="full_name">Full Name</string>
</resources>