<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".activities.login">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"

        />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Protect your device with SpotOn"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/full_name"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="text"
        android:background="@drawable/fiels_shape"
         />

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="DD-MM-YYYY"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fiels_shape"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:inputType="date" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="+91"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/fiels_shape"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:maxLength="10"
            android:digits="0123456789"
            android:inputType="phone" />
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Phone Number"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/fiels_shape"
            android:maxLength="10"
            android:digits="0123456789"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="+91"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/fiels_shape"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:maxLength="10"
            android:digits="0123456789"
            android:inputType="phone" />
        <EditText
            android:id="@+id/alt_phone_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Alternate Number"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/fiels_shape"
            android:maxLength="10"
            android:digits="0123456789"
            android:inputType="phone" />
    </LinearLayout>



    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Email id"

        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/fiels_shape"
         />

    <EditText
        android:id="@+id/alt_email_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Alternate Email id"

        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/fiels_shape"
         />
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Enter password"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fiels_shape"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_btn"

        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:text="@string/btn_register"/>
    <TextView
        android:id="@+id/errormessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/movetologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account?Click here"
        android:layout_marginTop="10dp"
        android:gravity="center"
        />




</LinearLayout>